--- a/index.html
+++ b/index.html
@@ -17,6 +17,22 @@
             <button class="botao">Criar um portfolio</button>
             <button class="botao">Atualizar meu currículo</button>
         </div>
+        <div class = "aba-conteudo ativo"/
+            <h3> finalizar ensino médio </h3>
+            <h4> tempo para completar </h4>
+        </div>
+        <div class = "aba-conteudo"/
+            <h3> continuar estudando curso de idioma </h3>
+            <h4> tempo para completar </h4>
+        </div>
+        <div class = "aba-conteudo"/
+            <h3> estudar para o enem </h3>
+            <h4> tempo para completar </h4>
+        </div>
+        <div class = "aba-conteudo"/
+            <h3> juntar dinheiro </h3>
+            <h4> tempo para completar </h4>
+        </div>
     </section>
 </body>
 </html>
