--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
             <button class="botao">Atualizar meu currículo</button>
         </div>
         <div class = "aba-conteudo ativo"/
-            <h3> finalizar ensino médio </h3>
-            <h4> tempo para completar </h4>
+            <h3 class = "aba-conteudo-principal" > finalizar ensino médio </h3>
+            <h4 class = "aba-conteudo-secundario" > tempo para completar </h4>
         </div>
         <div class = "aba-conteudo"/
-            <h3> continuar estudando curso de idioma </h3>
-            <h4> tempo para completar </h4>
+            <h3 class = "aba-conteudo-principal" > continuar estudando curso de idioma </h3>
+            <h4 class = "aba-conteudo-secundario" > tempo para completar </h4>
         </div>
         <div class = "aba-conteudo"/
-            <h3> estudar para o enem </h3>
-            <h4> tempo para completar </h4>
+            <h3 class = "aba-conteudo-principal" > estudar para o enem </h3>
+            <h4 class = "aba-conteudo-secundario" > tempo para completar </h4>
         </div>
         <div class = "aba-conteudo"/
-            <h3> juntar dinheiro </h3>
-            <h4> tempo para completar </h4>
+            <h3 class = "aba-conteudo-principal" > juntar dinheiro </h3>
+            <h4 class = "aba-conteudo-secundario" > tempo para completar </h4>
         </div>
     </section>
 </body>
