--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 
 <body>
-    <section class="conteudo-principal">
-        <h2 class="titulo-principal">Meus Objetivos do ano<span>_</span></h2>
-        <div class="botoes">
+    <section class = "conteudo-principal" >
+        <h2 class = "titulo-principal">Meus Objetivos do ano<span>_</span></h2>
+        <div class = "conteudo">
+        <div class = "botoes">
             <button class="botao">Cursos na Alura</button>
             <button class="botao">Criar projetos em Javascript</button>
             <button class="botao">Criar um portfolio</button>
@@ -26,13 +27,15 @@
             <h4 class = "aba-conteudo-secundario" > tempo para completar </h4>
         </div>
         <div class = "aba-conteudo"/
-            <h3 class = "aba-conteudo-principal" > estudar para o enem </h3>
-            <h4 class = "aba-conteudo-secundario" > tempo para completar </h4>
+            <h3> class = "aba-conteudo-principal" > estudar para o enem </h3>
+            <h4> class = "aba-conteudo-secundario" > tempo para completar </h4>
         </div>
         <div class = "aba-conteudo"/
             <h3 class = "aba-conteudo-principal" > juntar dinheiro </h3>
             <h4 class = "aba-conteudo-secundario" > tempo para completar </h4>
         </div>
+        </div>
+    </div>
     </section>
 </body>
 </html>
