--- a/index.html
+++ b/index.html
@@ -20,19 +20,23 @@
         </div>
         <div class = "aba-conteudo ativo"/
             <h3 class = "aba-conteudo-principal" > finalizar ensino médio </h3>
-            <h4 class = "aba-conteudo-secundario" > tempo para completar </h4>
+            <h4 class = "aba-conteudo-secundario" > tempo para completar </h4> 
+            <div class = "contador">
         </div>
         <div class = "aba-conteudo"/
             <h3 class = "aba-conteudo-principal" > continuar estudando curso de idioma </h3>
             <h4 class = "aba-conteudo-secundario" > tempo para completar </h4>
+            <div class = "contador">
         </div>
         <div class = "aba-conteudo"/
             <h3> class = "aba-conteudo-principal" > estudar para o enem </h3>
             <h4> class = "aba-conteudo-secundario" > tempo para completar </h4>
+            <div class = "contador">
         </div>
         <div class = "aba-conteudo"/
             <h3 class = "aba-conteudo-principal" > juntar dinheiro </h3>
             <h4 class = "aba-conteudo-secundario" > tempo para completar </h4>
+            <div class = "contador">
         </div>
         </div>
     </div>
