--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
             <div class = "contador">
         </div>
         <div class = "aba-conteudo"/
-            <h3 class = "aba-conteudo-principal" > continuar estudando curso de idioma </h3>
+            <h3 class = "aba-conteudo-principal" > continuar estudando curso de idioma até o final do ano </h3>
             <h4 class = "aba-conteudo-secundario" > tempo para completar </h4>
             <div class = "contador">
         </div>
         <div class = "aba-conteudo"/
-            <h3> class = "aba-conteudo-principal" > estudar para o enem </h3>
+            <h3> class = "aba-conteudo-principal" > fazer para o enem </h3>
             <h4> class = "aba-conteudo-secundario" > tempo para completar </h4>
             <div class = "contador">
         </div>
